syntax = "proto3";

import "Protos/shared.proto";

message Album{
    int32 id = 1;
    string name = 2;    
    int32 year = 3;
    repeated int32 musicianIds = 4;
    Category category = 5;
}

service AlbumContract {
    rpc Create(Album) returns (CreateResponse);
    rpc Update(Album) returns (GenericResponse);
    rpc Delete(SingleItemRequest) returns (GenericResponse);
    rpc Get(SingleItemRequest) returns (Album);
    // GetList talebi geldiğinde sunucundan birden fazla Album mesajı yollanacağını belirtmiş oluyoruz.
    // Bu mesajların her biri bir Album içeriğine sahip olacak ve istemci her mesajda bir album bilgisini almış olacak.
    rpc GetList(ListItemRequest) returns (stream Album); 
}